<resources>
    <string name="app_name">6x6 Fitness and Studying</string>
    <string name="home">Home</string>
    <string name="log_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image">profile image</string>
    <string name="gamertag_name">Stefan ce Mare</string>
    <string name="level_14">Level 14</string>
    <string name="wp_logo">WP logo</string>
    <string name="settings">Settings</string>
    <string name="instagram">Follow us on Instagram</string>
    <string name="twitter">Follow us on Twitter</string>
    <string name="sign_out">Sign Out</string>
    <string name="season_ends_in">Season ends in:</string>
    <string name="_2d_15h_33h">2d 15h 33h</string>
    <string name="_5_10">5/10</string>
    <string name="_0_1">0/1</string>
    <string name="snowflake">snowflake</string>
    <string name="no_gravity_mode">No Gravity Mode</string>
    <string name="modes_available_for">Modes available for:</string>
    <string name="_2d_12h_9m">2d 12h 9m</string>
    <string name="weapons_skins">Weapons Skins</string>
    <string name="character_skins">Character Skins</string>
    <string name="special_modes">Special Modes</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="equip_this_item">Equip this item?</string>
    <string name="tip_get_vaccinated_as_soon_as_available">Tip: Get vaccinated as soon as available!</string>
    <string name="tip_the_pain_you_feel_today_is_the_strength_you_feel_tomorrow">Tip: The pain you feel today is the strength you feel tomorrow.</string>
    <string name="corona_can_t_beat_a_powerlifter">Corona can\'t beat a student! Study and train hard!</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="_78_kg">78 kg</string>
    <string name="_182_cm">182 cm</string>
    <string name="squats">Squats</string>
    <string name="bench_press">Bench Press</string>
    <string name="john_petrucci">John Petrucci</string>
    <string name="deadlift">Deadlift</string>
    <string name="_95kg">95kg</string>
    <string name="squat">Squat</string>
    <string name="_6x6_100kg">6x6 100Kg</string>
    <string name="_0">0</string>
    <string name="_6x6_80kg">6x6 80Kg</string>
    <string name="_79_kg">79 Kg</string>
    <string name="your_weight">Your Weight:</string>
    <string name="finish">Finish</string>
    <string name="first_exercise">First Exercise</string>
    <string name="second_task">Second Task</string>
    <string name="let_s_get_you_back_on_track_with_your_studies_and_get_you_in_shape_like_corona_never_happened">Let\'s get you back on track with your studies and get you in shape like corona never happened!</string>
    <string name="welcome_to_6x6">Are you ready to Train?!</string>
    <string name="tip_to_start_a_new_workout_or_study_session_press_button">To start a new workout or study session press the "+" Button</string>
    <string name="procastination_is_not_for_winners_get_on_it">Procastination is not for winners! Get on it!</string>
    <string name="choose_your_first_task">Choose your first task</string>
    <string name="choose_your_second_task">Choose your second task</string>
    <string name="start">Start</string>
    <string name="congratulations">Congratulations!</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>

</resources>