<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".PreStudy1Activity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/fitnessapp_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstExerciseEditText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textColor="@color/textLight"
        android:textColorHint="@color/textLight"
        android:shadowColor="@color/textLight"
        android:gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/username_edittext"
        android:hint="@string/choose_your_first_task"
        />

    <EditText
        android:id="@+id/secondExerciseEditText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textColor="@color/textLight"
        android:textColorHint="@color/textLight"
        android:shadowColor="@color/textLight"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/firstExerciseEditText"
        android:background="@drawable/username_edittext"
        android:hint="@string/choose_your_second_task"
        />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        android:textColor="@color/textLight"
        android:textSize="24sp"
        android:layout_marginHorizontal="20dp"
        android:text="Manage your time spent on a task by using the Timeboxing Method!"
        />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        android:textColor="@color/textLight"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        android:text="A task is split into 2 50 minutes sets and 10 minutes breaks."
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv2"
        android:textColor="@color/textLight"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="Note: During breaks you are allowed to use your phone or laptop! Get some clean air!"
        />

    <Button
        android:id="@+id/startButton"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/textLight"
        android:background="@drawable/finish_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondExerciseEditText"
/>
</androidx.constraintlayout.widget.ConstraintLayout>