<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Workout1Activity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/fitnessapp_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/squatsContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/workoutHeight"
        android:layout_marginHorizontal="@dimen/workoutMarginHoriz"
        android:layout_marginTop="150dp"
        android:background="@drawable/active_workout_background"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/tvFirstExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/squat"
            android:textColor="@color/textLight"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="23dp"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/_6x6_100kg"
            android:textSize="11sp"
            android:textAllCaps="false"
            android:layout_marginEnd="15dp"
            android:textColor="@color/textLight"
            android:background="@drawable/choose_weight_button"
            />

        <Button
            android:id="@+id/set1"
            android:layout_width="@dimen/setWidth"
            android:layout_height="@dimen/setWidth"
            android:layout_marginStart="@dimen/setMarginStart"
            android:layout_marginTop="@dimen/setMarginTop"
            android:background="@drawable/round_inactive_button"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/_0"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/set2"
            android:layout_width="@dimen/setWidth"
            android:layout_height="@dimen/setWidth"
            android:layout_marginStart="@dimen/setMarginStart"
            android:layout_marginTop="@dimen/setMarginTop"
            android:background="@drawable/round_inactive_button"
            app:layout_constraintLeft_toRightOf="@+id/set1"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/_0"

            />

        <Button
            android:id="@+id/set3"
            android:layout_width="@dimen/setWidth"
            android:layout_height="@dimen/setWidth"
            android:layout_marginStart="@dimen/setMarginStart"
            android:layout_marginTop="@dimen/setMarginTop"
            android:background="@drawable/round_inactive_button"
            app:layout_constraintLeft_toRightOf="@+id/set2"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/_0"

            />

        <Button
            android:id="@+id/set4"
            android:layout_width="@dimen/setWidth"
            android:layout_height="@dimen/setWidth"
            android:layout_marginStart="@dimen/setMarginStart"
            android:layout_marginTop="@dimen/setMarginTop"
            android:background="@drawable/round_inactive_button"
            app:layout_constraintLeft_toRightOf="@+id/set3"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/_0"

            />
        <Button
            android:id="@+id/set5"
            android:layout_width="@dimen/setWidth"
            android:layout_height="@dimen/setWidth"
            android:layout_marginStart="@dimen/setMarginStart"
            android:layout_marginTop="@dimen/setMarginTop"
            android:background="@drawable/round_inactive_button"
            app:layout_constraintLeft_toRightOf="@+id/set4"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/_0"

            />

        <Button
            android:id="@+id/set6"
            android:layout_width="@dimen/setWidth"
            android:layout_height="@dimen/setWidth"
            android:layout_marginStart="@dimen/setMarginStart"
            android:layout_marginTop="@dimen/setMarginTop"
            android:background="@drawable/round_inactive_button"
            app:layout_constraintLeft_toRightOf="@+id/set5"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/_0"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>